# voxels

./: .gitignore  CMakeLists.txt  generators.hpp  interfaces.hpp  irenderable.hpp  log  main.cpp  norm.hpp  shaders.hpp  voxel.hpp  voxel_linearized.hpp  voxel_scene.hpp  window.hpp
shaders/: linear.vert  voxel.frag  voxel.vert
